*Empty MediaWiki Message*

--- a/Рябов,_Владимир_Павлович.mw
+++ b/Рябов,_Владимир_Павлович.mw
@@ -28,7 +28,7 @@
 [[File:Ryabov VP and Ryabova Sofia.jpg|thumb|left|300px|Рябовонь Олодимэр София сазорканзо марто. 1920-це иетнестэ]]
 Рябовонь Владимир чачсь чадыковонь 1-це чисте 1900 иесте [[Ламбаське (Ицял буень)|Ламбаське велесэ]]<ref name="«ПОБЕДА»">[http://pobeda-rom.ucoz.ru/news/da_obretut_pokoj_stradavshie_telesno/2013-08-16-175 Газета «ПОБЕДА» Да обретут покой страдавшие телесно]{{ref-ru}}</ref>, [[Ицялонь буе|Ицялонь буесэ]]  эрзянь сокиця-видиця семияс. Сонзе лелязо ульнесь [[Рябовонь, Анатолий Павлович|Анатолий Рябовонь]]. 1927 иесте прядызеть рабфаконть Покровскоень институтонть вакссо Московссо. Седе тов [[1932 ие]]сте прядызеть Московонь веленьхозяйствань академия Тимирязевень лемсе, теде мейле тонавтсь Мордовской аграрной пединститутсо. 1933 саезь 1937 видс важодсь прявтредакторокс веленьхозяйствань литературань Мордовской кирьяпусмонь издательствасо. Сон поладыця таблицанть {{lang-ru|«Правила смешивания минеральных удобрений для внесения под различные культуры и почвы»}}. 
 [[File:Galina Ryabova-Popova.jpg|thumb|left|300px|Галина Владимировна Попова (Рябова) Масторавань Чистэ лецтни тетянзо (Рябовонь Олодимирэнь), ды лия эрзятнень.]]
-Ютавтыль рузонь кельсте эрзякс сёрмадовтомат [[Пушкин, Александр Сергеевич|А.С. Пушкин]]ень («Ёвкс калонь кундыцядо ды калнэде» ({{lang-ru|«О рыбаке и рыбке»}} [[1937]]), [[М.Ю. Лермонтов]]онь, [[Н.А. Некрасов]]онь.  Владимир Рябов васеньце, кие снартнесь ютавтомонзо эрзякс малавикс [[суоми-угрань раськеть]]нень - [[Карелэть|карелэнь]] ды [[Суомить|суоминь]] [[«Калевала» морокерькс|«Калевала» морокерьксэнть]]<ref name="«Сятко2»">[https://fennougrica.kansalliskirjasto.fi/bitstream/handle/10024/74503/Syatko_1935-1_2%20-%20page%201.pdf?sequence=1 «Сятко» № 2, МОРДГИЗ Саранск 1935 ие. Калевала. Финляндиянь народонь эпос. 45 лоп.]{{ref-myv}}</ref>. Сон анокстызеть ды поладызеть  [[Гамбург ош|Гамбургсо]] [[1978]] иесте эрзянь-немецень валксонть.
+Ютавтыль рузонь кельсте эрзякс сёрмадовтомат [[Пушкин, Александр Сергеевич|А.С. Пушкин]]ень («Ёвкс калонь кундыцядо ды калнэде» ({{lang-ru|«О рыбаке и рыбке»}} [[1937]]), [[М.Ю. Лермонтов]]онь, [[Н.А. Некрасов]]онь («Якшаматя»<ref name="«Сятко35»">[https://fennougrica.kansalliskirjasto.fi/bitstream/handle/10024/74499/Syatko_1935-2_1%20-%20page%201.pdf?sequence=1 «Сятко» 6-це №, Мокщоэрзянь Государственной Издательствась, Саранск 1935. Якшаматя 58-62 лоп.]{{ref-myv}}</ref>, ({{lang-ru|«Дед Мороз»}} [[1935]]).  Владимир Рябов васеньце, кие снартнесь ютавтомонзо эрзякс малавикс [[суоми-угрань раськеть]]нень - [[Карелэть|карелэнь]] ды [[Суомить|суоминь]] [[«Калевала» морокерькс|«Калевала» морокерьксэнть]]<ref name="«Сятко2»">[https://fennougrica.kansalliskirjasto.fi/bitstream/handle/10024/74503/Syatko_1935-1_2%20-%20page%201.pdf?sequence=1 «Сятко» 2-це №, МОРДГИЗ Саранск 1935 ие. Калевала. Финляндиянь народонь эпос. 45 лоп.]{{ref-myv}}</ref>. Сон анокстызеть ды поладызеть  [[Гамбург ош|Гамбургсо]] [[1978]] иесте эрзянь-немецень валксонть.
 
 1937 иесте  ульнесь чумондазь ды ёртозь тюрьмас. 1938 [[панжиков]]сто ульнесь ледезь [[Саранск]]ойсэ. Реабилитировазь ансяк [[1956 ие]]сте.
 
