*Empty MediaWiki Message*

--- a/Батаевень,_Павел_Петрович.mw
+++ b/Батаевень,_Павел_Петрович.mw
@@ -33,9 +33,7 @@
 
 
 == Сёрмадовксонзо ==
-
-САДСО<br />
-
+* САДСО<br />
 Течияк, истя жо, кода исяк,<br />
 Валдо-сэнь июнень сакшнось чи.<br />
 Течияк, кодак ушов тон лисят<br />
@@ -53,8 +51,7 @@
 Легендарной героенть Чапаень<br />
 Лемензэ мельс-паросо канды<br /><br />
 
-
-ПАРАДСО<br />
+*  ПАРАДСО<br />
 Варминесь эзь ойма кольнемадо,<br />
 Кутмори чевтестэ эрьвейкень.<br />
 Физкультурникень моли парадось,<br />
@@ -73,7 +70,7 @@
 Рунгованзо кенярдозь яки.<br /><br />
 
 
-АРСЕМА<br />
+* АРСЕМА<br />
 Минь мартот эринек вишка пингстэ,<br />
 Ве таркасо ютась одкс шканок.<br />
 Ульнинек сюлмавозь буто пинкссэ, -<br />
@@ -88,7 +85,7 @@
 Кода вадрясто эри авась.<br /><br />
 
 
-БУТИ ВАСТОМС МАРТОТ ТЕНЬ А ЛЕТИ…<br />
+* БУТИ ВАСТОМС МАРТОТ ТЕНЬ А ЛЕТИ…<br />
 Сандей ютксо шольнезь чуди леесь,<br />
 Ведьгев чаротне галакс шлёпить,<br />
 Горниповнекс кудрянзо килеенть<br />
@@ -109,6 +106,8 @@
 Ды тейтерень весёла кужот.<br />
 Бути вастомскак мартот а лети, -<br />
 Вечкеманок илязо пужо.<br />
+
+* Анкине  ([[1934]])<ref name="«Сятко35»">«Сятко» 5-це №, Мокщоэрзянь Государственной Издательствась, Саранск 1935. П. Батаев Анкине 41-43 лоп.{{ref-myv}}</ref>
 
 == Сёрм.: ==
 * Келей паксят. Великой Отечественной войнасо (1941-1945 ие) чавозь эрзянь поэтнень ды писательтнень произведенисят. Пурныцязо П.Гайни  Мордовской Государственной издательствась. — Саранск, 1952 128 с. — с. 99-100 
