*Empty MediaWiki Message*

--- a/Батаевень,_Павел_Петрович.mw
+++ b/Батаевень,_Павел_Петрович.mw
@@ -107,8 +107,9 @@
 Бути вастомскак мартот а лети, -<br />
 Вечкеманок илязо пужо.<br />
 
-* Анкине  ([[1934]])<ref name="«Сятко35»">«Сятко» 5-це №, Мокщоэрзянь Государственной Издательствась, Саранск 1935. П. Батаев Анкине 41-43 лоп.{{ref-myv}}</ref>
-
+* Анкине  ([[1934]])<ref name="«Сятко35»">«Сятко» 5-це №, Мокшоэрзянь Государственной Издательствась, Саранск 1935. П. Батаев Анкине 41-43 лоп.{{ref-myv}}</ref>
+*  Карман эрямо ([[1934]])<ref name="«Сятко35_»">[https://fennougrica.kansalliskirjasto.fi/bitstream/handle/10024/74504/Syatko_1935-1_1%20-%20page%201.pdf?sequence=1 «Сятко» 1-це №, Саранск 1935. П. Батаев Карман эрямо 25 лоп.]{{ref-myv}}</ref>
+*  Ков валдоне ([[1933]])<ref name="«Сятко33_»">[https://fennougrica.kansalliskirjasto.fi/bitstream/handle/10024/74461/Syatko_1933_no_21-22.pdf?sequence=1 «Сятко» 21-22 №, Саранск 1933, П. Батаев Ков валдоне 48 лоп.]{{ref-myv}}</ref>
 == Сёрм.: ==
 * Келей паксят. Великой Отечественной войнасо (1941-1945 ие) чавозь эрзянь поэтнень ды писательтнень произведенисят. Пурныцязо П.Гайни  Мордовской Государственной издательствась. — Саранск, 1952 128 с. — с. 99-100 
 * Батаев, П. Валскень стязь.  / П. Батаев // . - 1995.- N4
