/* Содавикс ломанть те велестэнть */

--- a/Кацялай_(Кочкурбуе).mw
+++ b/Кацялай_(Кочкурбуе).mw
@@ -72,12 +72,11 @@
 == Содавикс ломанть те велестэнть ==
 Кацялайсэ чачсть:
 * Автаев П.И.<ref>[http://www.gsrm.ru/gosudarstvennoe-sobranie-rm-pyatogo-sozyva/structure-of-the-state-assembly/deputaty-gosudarstvennogo-sobraniya-rm-pyatogo-sozyva/208/ АВТАЕВ ПЕТР ИВАНОВИЧ {{Ref-ru}}]]</ref>—  ({{Lang-ru|Депутат Государственного Собрания Республики Мордовия}}) 
-* Титаренко Н.А. — артист (эри Приволжье велесэ, [[Саратов ёнкс]])
-* Бочканова Т.М. м  экономикань наукатнень кандидат
-* Солдаткина С.М. —  экономикань наукатнень кандидат
-* Шугаева Т.В.<ref>[http://rm.saransk.ru/?id_refer=2479 село Качелай, Кочкуровский район{{Ref-ru}}]]</ref> —  филологиянь наукатнень кандидат
+* Бочканова Т.М. — экономикань наукатнень кандидат
 *Куркин Михаил Исаевич<ref>[http://chel-portal.ru/encyclopedia/Kurkin/t/9600 Энциклопедия Челябинской области. Куркин Михаил Исаевич {{Ref-ru}}]]</ref> — юрист, судья
-
+* Солдаткина С.М. —  экономикань наукатнень кандидат
+* Титаренко Н.А. — артист (эри Приволжье велесэ, [[Саратов ёнкс]])
+* Шугаева Т.В.<ref>[http://rm.saransk.ru/?id_refer=2479 село Качелай, Кочкуровский район{{Ref-ru}}]]</ref> —  филологиянь наукатнень кандидат
 
 ==Веленть эрямозо==
 
