--- a/Оразай_ош.mw
+++ b/Оразай_ош.mw
@@ -62,4 +62,10 @@
 }}
 '''Оразай ош''' ({{Lang-ru|Рузаевка}}) — те ошось [[Мордовия Республикась|Мордовиясо]], [[Оразайбуе]]сэ.
 
+== Содавикс ломанть тестэнть ==
+* [[Бочканов Андрей|Андрей Бочканов]]<ref>[http://erzyaks.ru/myv/vaj-kodamo-oderzyan-morucya/  «Erzäks.ru»||«Вай кодамо!» од эрзянь морыцясь – Андрей Бочканов]{{Ref-myv}}</ref> — неень шкань эрзянь кельсэ морыця
+
+== Лисьм.: ==
+<references />
+
 [[Категория:Россия Масторонть ошт]]
