--- a/Ванят-марят.mw
+++ b/Ванят-марят.mw
@@ -1,13 +1,67 @@
-[[Артовкс:MelampyrumNemorosum1.jpg|thumb|300px|right|border|Цеци ванят-марят тикшесь]]
-'''Ванят-марят''' (лат. ''Melampurum nemorosum'') — вейке иень перть касыця тикше. Норичникень семиянь. 
+{{Таксономиясь
+|name =Тумовирень дарькат-марькат
+|latin =Melampyrum nemorosum
+|image file =Melampyrum nemorosum001.jpg
+|image descr = 
+|superregnum =
+|subregnum = 
+|раздел =
+|superphylum =
+|phylum = 
+|subphylum =
+|superdivisio =
+|divisio =
+|subdivisio = 
+|superclassis =
+|classis = 
+|subclassis =
+|infraclassis =
+|superordo =
+|ordo = 
+|subordo =
+|infraordo =
+|superfamilia =
+|familia = 
+|subfamilia =
+|tribus =
+|genus =
+|subgenus =
+|species =
+|subspecies =
+|unranked =
+|range map =
+| wikispecies       =Melampyrum nemorosum
+| commons           =Category:Melampyrum nemorosum
+| iucn              = 
+| itis              = 
+| ncbi              = 
+| eol               = 
+| grin             = 
+| ipni              = 
+}}
+'''Ванят-марят'''<ref name="Бузакова, Тикшень валкс">Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2 {{ref-ru}}, {{ref-myv}}</ref>, лиякс: '''Тумовирень дарькат-марькат'''<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}}, {{ref-myv}}</ref> ({{lang-la| ''Melampýrum nemorósum''}}, {{lang-ru| ''Марья́нник дубра́вный'', или ''Иван-да-марья''}}) — вейкеиень [[тикше]]нь касыця, [[Дарькат-марькат|Дарькань-марькань]] буень (''Melampyrum'') [[тикшень маштыцятнень раськесь|Тикшень маштыцянь]]<ref name="Русско-эрзянский ботанический"/> семиянь (''Orobanchaceae''). 
 
-Нетьксэзэ човине, лопанзо керсевезь, аламодо понавт, казямот. Цецянзо [[ожо|ожот]], верце лопанзо фиолетовойть. Кассы [[вирь|вирьсэ]]. Мазылгавты пертьпельксэнть. 
-
-
+== Чачозо-покшолмазо ==
+[[File:Melampyrum nemorosum.jpg|thumb|250px|left|Тумовирень дарькат-марькат (ботаникань артовкс)]]
+Нетьксэзэ човине, лопанзо керсевезь, аламодо понавт, казямот. Цецянзо [[ожо|ожот]], верце лопанзо фиолетовойть. Касовкс 15—50 см сэрьсэ. [[Нетькс]]энзэ видеть, пек [[тарад]]ов.  Россиява вастневи веси евпропань пельксева, касы [[пиче]] [[вирь]]га, кужонь таркава, [[куракш]]нонь касовкска, начко ды чеядавксонь таркава. Мазылгавты пертьпельксэнть [[Мекшт]]не саить эйстэнзэ [[медярво]].
 == Тикшень лемтне ==
-Истя мерить [[Тумобуе|Тумобуень]] Кобалесэ.
+* '''Ванят-марят''' мерить [[Тумобуе|Тумобуень]] Кобалесэ<ref name="Бузакова, Тикшень валкс"/>.
+* ({{Lang-lat|Melampýrum}}, {{lang-ru| ''Марьянник''}})  - '''''[[дарькат-марькат]]'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Melampýrum cristatum}}, {{lang-ru| ''Марьянник гребенчатый''}})  - '''''[[сурсемень кондямо дарькат-марькат]]'''''<ref name="Русско-эрзянский ботанический"/>. 
 
-== Сёрм.: ==
-* Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2
+== Фотокувт== 
+<gallery>
+Image:Natt och dag stor.jpg|Цецямсто
+Image:Bombus lucorum - Melampyrum nemorosum - Keila.jpg|Мекшэсь саи медярво
+</gallery>
 
-[[Категория:Тикшеть|В]]
+
+== Содамоёвкст ==
+==  Лисьмапря ==
+<references />
+
+{{stub}}
+
+[[Категория:Тикшеть|Т]]
+[[Категория:Тикшень маштыцят|Т]]
+[[Категория:Биология|Т]]
