--- a/Ванят-марят.mw
+++ b/Ванят-марят.mw
@@ -45,9 +45,9 @@
 [[File:Melampyrum nemorosum.jpg|thumb|250px|left|Тумовирень дарькат-марькат (ботаникань артовкс)]]
 Нетьксэзэ човине, лопанзо керсевезь, аламодо понавт, казямот. Цецянзо [[ожо|ожот]], верце лопанзо фиолетовойть. Касовкс 15—50 см сэрьсэ. [[Нетькс]]энзэ видеть, пек [[тарад]]ов.  Россиява вастневи веси евпропань пельксева, касы [[пиче]] [[вирь]]га, кужонь таркава, [[куракш]]нонь касовкска, начко ды чеядавксонь таркава. Мазылгавты пертьпельксэнть [[Мекшт]]не саить эйстэнзэ [[медярво]].
 == Тикшень лемтне ==
-* '''Ванят-марят''' мерить [[Тумобуе|Тумобуень]] Кобалесэ<ref name="Бузакова, Тикшень валкс"/>.
+* '''Ванят-марят''' мерить [[Тумобуе|Тумобуень]] [[Кобале (Тумобуе)|Кобалесэ]]<ref name="Бузакова, Тикшень валкс"/>.
 * ({{Lang-lat|Melampýrum}}, {{lang-ru| ''Марьянник''}})  - '''''[[дарькат-марькат]]'''''<ref name="Русско-эрзянский ботанический"/>. 
-* ({{Lang-lat|Melampýrum cristatum}}, {{lang-ru| ''Марьянник гребенчатый''}})  - '''''[[сурсемень кондямо дарькат-марькат]]'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Melampýrum cristatum}}, {{lang-ru| ''Марьянник гребенчатый''}})  - '''''[[сурсемень кондямо дарькат-марькат]]'''''<ref name="Русско-эрзянский ботанический"/>.
 
 == Фотокувт== 
 <gallery>
