--- a/Дуняшин,_Алексей_Васильевич.mw
+++ b/Дуняшин,_Алексей_Васильевич.mw
@@ -28,19 +28,17 @@
 == Эстедензэ ==
 Семияст аволь покшоль, эрясть вадрясто. Тетязо, Василий Фролович, содыль сёрмас, бажась тонавтомс эйкакшонзояк. Алёша Дуняшин прядызе ушодкс школанть Шнамо Конев марто. Ульнесь веленькулянь сёрмадеекс, сёрмадовксонзо лиснесть Бугурусланонь, Самарань («Коммуна»), ды московонь «Беднота» кулялопатнесэ. 1926 иень [[сёксь|сёксня]] тусь тонавтнеме Московонь государствань журналистикань институтсо.  Теке иестэ лись васенце ёвтнемазо. Тонавтнеманзо прядызе 1928 иестэ.
 
-А. В. Дуняшинэнь эрямо шкасто Россиянь историясь ульнесь даволонь шкакс. Сон ютась А. В. Дуняшинэнь эрямонзо пачкаяк. Ульнесь гражданской войнасо, мейле ветясь культурно-содамочинь ды тевс тердемань важодема А. В. Дуняшинэнь шкинема шказо нурькинель. Тень лангс апак вано, кадсь редявикс тешкс эрзянь журналистикантень, публицистикань ды художествань литературантень. Сёрмадомо кармась 1923 иестэ рабфаксо тонавтнемстэ. Сонзэ тешкстнэ-редявкстнэ, фельетонтнэ, ёвтнематне сеетьстэ лиснильть «Якстере теште» газетасонть. Сон парсте содылинзе эрзятнень эрямост, сынст обуцяст, мелест-бажамост, коест. Московсо А. В. Дуняшин важодсь «Якстере теште» газетань редакциясо секретарекс. 
+А. В. Дуняшинэнь эрямо шкасто Россиянь историясь ульнесь даволонь шкакс. Сон ютась А. В. Дуняшинэнь эрямонзо пачкаяк. Ульнесь гражданской войнасо, мейле ветясь культурно-содамочинь ды тевс тердемань важодема А. В. Дуняшинэнь шкинема шказо нурькинель. Тень лангс апак вано, кадсь редявикс тешкс эрзянь журналистикантень, публицистикань ды художествань литературантень. Сёрмадомо кармась [[1923 ие]]стэ рабфаксо тонавтнемстэ. Сонзэ тешкстнэ-редявкстнэ, фельетонтнэ, ёвтнематне сеетьстэ лиснильть «Якстере теште» газетасонть. Сон парсте содылинзе [[эрзят]]нень эрямост, сынст обуцяст, мелест-бажамост, коест. Московсо А. В. Дуняшин важодсь «Якстере теште» газетань редакциясо секретарекс. 
 
 Кулялопань редакторось [[Глухов, Петр Семенович|Пётр Глухов]] сёрмадсь А. В. Дуняшиндэ<ref name="«Эрзянь Мастор»">«Эрзянь Мастор», 257-це №, Т. Ф. Сафонова, Кундасынек чачома чист марто валдо ойме ломантнень лемест: Дуняшин Алексей Васильевич {{Ref-myv}}</ref>: 
 {{Цитатань ушодома}}«А пек сэрей, ловтаня чама, оршазь раужо пиджаксо – истямоль лангс ванозь Алексей Дуняшин. Ялганзо мерильть тензэ Алёша. Эстензэ пек вечкевсь Алеко лемесь, секскак сеетьстэ сёрмадыль Алек Дуняшин… Дуняшинэнь сёрмадовкстнэнь эйстэ монень весемеде пек вечкевильть фельетонтнэ. Сынь сёрмадозь, кода кортыть, пек пшти кельсэ. Эряви меремс, што сондензэ икеле «Якстере теште» газетасонть сёрмадыцят арасельть. Секс лован, што эрзянь журналистикасонть Дуняшин ульнесь васенце фельетонистэкс».{{Цитатань пе}}
 
+[[1929 ие]]стэ Московсо, Цетриздатсо лиссь «Васень сяткт» вейсэнь пусмось, конаньсэ печатазельть 25 эрзянь сёрмадейтнень морост ды ёвтнемаст. Пусмонть пурныцязо А. В. Дуняшин. Икельце валонть таркас сёрмадсь статья: «Сятктнэ яла кирвазить». Эрзянь поэтнэнь ды прозаиктнень сон тердсь сёрмадомо апак капша вадря произведеният. Шнась од поэтнэнь валморост: [[Моро Артур|Артуронь Моронь]], [[Лукьянов, Алексей Миронович|Алексеень Лукьяновонь]], [[Радаев (смустьтне)|В. Радаевень]], С. Салдинэнь. Неть валморозэйтнэнь кист ванькс. Шлязь ливезьсэст, сельведьсэст. Эрзянь литературань келесь - од кель. Валтнэнь парсте апак човсе-паро стих а сёрмадат. Ды аволь ансяк те. Арасель валморонь сёрмадома форманок. Эрьвась савсь вешнемс. «Васень сятктнэ» - минек художественной литературанть праздникест. Кадык те сборникесь ацы паро Ки лия сборниктнэнень, конатненькувалт карми касомо алкуксонь художественной литература» - истямо валсо пряды эсь статьянть Алексей Дуняшин. Сонзэ мельтне-арсематне ульнесть видеть.
 
-1930 иестэ Московсо, Центриздатсо лиссь А. Дуняшинэнь «Пиципалакс» книгазо, козонь совасть ёвтнеманзо ды фельетононзо, конатне печатазельть газетатнесэ. Книгась ушодови «Пиципалакстнэнь» сёрмадыцядост [[Чесноков, Фёдор Маркелович|Ф. Чесноковонь]] статьясонть. Федор Маркелович тешксты<ref name="«Эрзянь Мастор»" />: 
+[[1930 ие]]стэ [[Москов]]со, Центриздатсо лиссь А. Дуняшинэнь «Пиципалакс» книгазо, козонь совасть ёвтнеманзо ды фельетононзо, конатне печатазельть газетатнесэ. Книгась ушодови «Пиципалакстнэнь» сёрмадыцядост [[Чесноков, Фёдор Маркелович|Ф. Чесноковонь]] статьясонть. Федор Маркелович тешксты<ref name="«Эрзянь Мастор»" />: 
 {{Цитатань ушодома}}«Дуняшинэнь книгастонть ули косто саемс пример, ули мезе лангс ваномс, ули косто неемс асатыкснэньгак. Книгась сонсь невтьсы, кода Дуняшин тонавтнесь, кода кайсь фельетонистэкс-писателекс. Дуняшинэнь фельетононзо мокшэрзянь трудицятнень неень эрямо-чиденть а явовить… Сон аволь ансяк превсэ-мельсэ, потмоёжосояк неень эрямонть марто. Сонзэ раштызе-пештизеяк неень шкась».{{Цитатань пе}}
 
-1929 иестэ Московсо, Цетриздатсо лиссь «Васень сяткт» вейсэнь пусмось, конаньсэ печатазельть 25 эрзянь сёрмадейтнень морост ды ёвтнемаст. Пусмонть пурныцязо А. В. Дуняшин. Икельце валонть таркас сёрмадсь статья: «Сятктнэ яла кирвазить». Эрзянь поэтнэнь ды прозаиктнень сон тердсь сёрмадомо апак капша вадря произведеният. Шнась од поэтнэнь стихест: [[Моро Артур|Артуронь Моронь]], [[Лукьянов, Алексей Миронович|Алексеень Лукьяновонь]], [[Радаев (смустьтне)|В. Радаевень]], С. Салдинэнь. Неть валморозэйтнэнь кист ванькс. Шлязь ливезьсэст, сельведьсэст. Эрзянь литературань келесь - од кель. Валтнэнь парсте апак човсе-паро стих а сёрмадат. Ды аволь ансяк те. Арасель валморонь сёрмадома форманок. Эрьвась савсь вешнемс. «Васень сятктнэ» - минек художественной литературанть праздникест. Кадык те сборникесь ацы паро Ки лия сборниктнэнень, конатненькувалт карми касомо алкуксонь художественной литература» - истямо валсо пряды эсь статьянть Алексей Дуняшин. Сонзэ мельтне-арсематне ульнесть видеть.
-
-Эрямокизэ пек нурькинель, сёрмадомс савсь тензэ ансяк 4-5 иеть. Эрямостонть тусь 1931 иестэ 27 иесэ. Сонзэ куломадонть молить эрьва кодат кортамот. Сонзэ ледизь – мерить веенстнэ, ваявтызь Рав леентень – сёрмадыть лиятне. Тень лангс апак вано, сон тейсь ламо вадря тевть минек литературасонть, кадовсь талант марто васенце фельетонистэкс.
-
+Эрямокизэ пек нурькинель, сёрмадомс савсь тензэ ансяк 4-5 иеть. Эрямостонть тусь [[1931 ие]]стэ 27 иесэ. Сонзэ куломадонть молить эрьва кодат кортамот. Сонзэ ледизь – мерить веенстнэ, ваявтызь Рав леентень – сёрмадыть лиятне. Тень лангс апак вано, сон тейсь ламо вадря тевть минек литературасонть, кадовсь талант марто васенце фельетонистэкс.
 
 == Сёрмадовксонзо ==
 # Чись лись (Самар ош, Рабфак, 1925)
