--- a/Пятаев,_Емельян_Иванович.mw
+++ b/Пятаев,_Емельян_Иванович.mw
@@ -22,7 +22,7 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Пятаевэнь Емельян''' (cёрмадей лемезэ {{Lang-myv|Эмиль Пятай}}, [[1914]] [[умарьковонь 17 чи]]  - [[1966]]) — [[Эрзянь кель|эрзянь]] кельсэ сёрмадей ды валморозей.  
+'''Пятаевэнь Емельян''' (cёрмадей лемезэ {{Lang-myv|Эмиль Пятай<ref name="Время и события. 2014"/>}}, [[1914]] [[умарьковонь 17 чи]]  - [[1966]]) — [[Эрзянь кель|эрзянь]]<ref name="Время и события. 2014">Время и события. 2014: библиографический указатель / Нац. б-ка им. А.С. Пушкина Респ. Мордовия; [сост. А.Н. Маланьчева]. – Саранск, 2013. – 148 с. {{Ref-ru}}</ref> кельсэ сёрмадей ды валморозей.  
 
 ==Эстедензэ==
 Чачсь [[1914]] [[умарьковонь 17 чи]]стэ [[Кулясова (Камешкир буе)|Кулясова]] эрзянь<ref>[http://www.e-mordovia.ru/news/view/21475 Официальный сайт органов государственной власти РМ / 17 августа 2014 года исполняется 100 лет со дня рождения члена Союза писателей СССР (1938 г.), мордовского писателя Емельяна Ивановича Пятаева, который печатался под псевдонимом Эмиль Пятай{{ref-ru}}]</ref> велесэ неень [[Камешкир буе]]нь [[Пенза ёнкс]]со изыця-видицянь семиясо. Тетязо ульнесь стадань ваныцякс. Эмиль Пятай ледстнесь: 
@@ -41,7 +41,7 @@
 Эмиль Пятай [[1938 ие]]стэ ульнесь примазь СССР-нь Сёрмадеень Вейсэндявксов.
 
 1963 иестэ саезь 1965 эрьва ие Саран ошсо листь «Велень эйкакшт» ({{Lang-ru|«Сельские дети»}}), «Тундонь вармат» ({{Lang-ru|«Весенний ветер»}}), «Вирьсэ» ({{Lang-ru|«В лесу»}}).
-
+Эмиль Пятай сёрмадовксонзо ульнесть ютавтнезь [[рузонь кель|рузонь]], [[маринь кель|маринь]], [[ветькень кель|ветькень]] ды [[коми кель|коминь]] кельтнес<ref name="Время и события. 2014"/>.  
 ==Шкинемазо==
 ===Эрзянь кельсэ===
 #  «Келей паксясо» ([[1934 ие|1934]])
