*Empty MediaWiki Message*

--- a/Лёша_Рав.mw
+++ b/Лёша_Рав.mw
@@ -22,7 +22,7 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Лёша Рав''' ({{lang-ru|Алексей Владимирович Рогожин}}, [[1909 ие]]  [[эйзюрковонь 7 чи]]  [[Ветькень Республикась|Ветькень Масторонь]] Балабаш-Нурусово велесэ - [[1944 ие]]  [[эйзюрковонь 24 чи]] [[Дрогобыч ош|Дрогобыч]]) — [[Эрзя|эрзянь]] содавикс валморонь ладсий. Ульнесь Обмоце Ине Масторонь войнасо.
+'''Лёша Рав''' ({{lang-ru|Алексей Владимирович Рогожин}}, [[1909 ие]]  [[эйзюрковонь 7 чи]]  [[Ветькень Республикась|Ветькень Масторонь]] Балабаш-Нурусово велесэ - [[1944 ие]]  [[эйзюрковонь 24 чи]] [[Дрогобыч ош|Дрогобыч]]) — [[Эрзя|эрзянь]]<ref name="Время и события. 2014">Время и события. 2014: библиографический указатель / Нац. б-ка им. А.С. Пушкина Респ. Мордовия; [сост. А.Н. Маланьчева]. – Саранск, 2013. – 148 с. {{Ref-ru}}</ref> содавикс валморонь ладсий. Ульнесь Обмоце Ине Масторонь войнасо.
 
 ==Эстедензэ==
 Чачсь [[1909 ие]]нь [[эйзюрковонь 7 чи]]сте [[Ветькень Республикась|Ветькень Масторонь]] Первомайской буень Балабаш-Нурусово велесэ вирень ванстыцянь семиясо.
