*Empty MediaWiki Message*

--- a/Втулкин,_Михаил_Алексеевич.mw
+++ b/Втулкин,_Михаил_Алексеевич.mw
@@ -22,7 +22,7 @@
  |вальма               = 
  |википурнавкс         = 
 }}
-'''Втулкинэнь Михаил Алексеевич''' ( [[1929]] [[эйзюрковонь 24 чи]] [[Самарань ёнкс]]со Дунаевка велесэ — [[1991]] [[умарьковонь 16 чи]] [[Саранск]]ойсэ ) — [[Эрзя|эрзянь]] валморонь ладсийть<ref name="«Эрзянь Мастор»">[http://www.erzia.saransk.ru/arhiv.php?n=1190&nom11=257  «Эрзянь Мастор», №257, САМАРА ЁНКСОНЬ СОДАВИКС ЭРЗЯТНЕ]{{Ref-myv}}</ref>, куляньсёрмадей, сёрмадей.
+'''Втулкинэнь Михаил Алексеевич''' ( [[1929]] [[эйзюрковонь 24 чи]] [[Самарань ёнкс]]со Дунаевка велесэ — [[1991]] [[умарьковонь 16 чи]] [[Саранск]]ойсэ ) — [[Эрзя|эрзянь]]<ref name="Время и события. 2014">Время и события. 2014: библиографический указатель / Нац. б-ка им. А.С. Пушкина Респ. Мордовия; [сост. А.Н. Маланьчева]. – Саранск, 2013. – 148 с. {{Ref-ru}}</ref> валморонь ладсийть<ref name="«Эрзянь Мастор»">[http://www.erzia.saransk.ru/arhiv.php?n=1190&nom11=257  «Эрзянь Мастор», №257, САМАРА ЁНКСОНЬ СОДАВИКС ЭРЗЯТНЕ]{{Ref-myv}}</ref>, куляньсёрмадей, сёрмадей.
 == Эстэдензэ ==
 Чачсь 1929 иень [[эйзюрковонь 24 чи]]стэ Дунаевка велесэ [[Похвистневань буе Самарань ёнксcо|Похвистневань буэсе]] [[Самарань ёнкс]]со. Сисем иесэ цёрынесь кадовсь тетявтомо. Тетязо, Алексей Гаврилович, ульнесь ламонь содыця ломань — важодсь бухгалтерэкс, авазо, Анна Нефедовна, чарась-велясь кудоютконь тевтнесэ. Втулкинтнэнь ульнесть ниле эйкакшост. Миша ульнесь меельцесь. Эрясть Самара ёнксонь Покш Толкан велень Дунаёвка велинесэнть. Ней те велиненть юртозояк эзь кадово. Ялатеке [[валморозей|валморозеенть]] оймесь свал тердсь чачома таркантень. Зярдо прыль ютко шка, Михаил Алексеевич сыль тей, пульзиль латконь икелев, косо зярдо-бути ульнесь чачома [[кудо]]зо, паласы моданть, ды [[сельведь|сельведензэ]] поцерьсэ туильть чамаванзо. Велинесь вишкинель, вейке ульцясоль. Сестэ тосо ульнесь школаяк. Тесэ ушодсь тонавтнеме Миша Втулкин. Мейле сисем иень школав якась Яблоновкав. Мольсь война, Мишань ялганзо ниле классонь прядомадо мейле лоткасть тонавтнеме. Миша прядсь сисем класст. Мейле сась Покш Толканонь педтехникумов, конань прядызе [[1948 ие]]стэ.
 
