--- a/Ишуткинэнь_Николай.mw
+++ b/Ишуткинэнь_Николай.mw
@@ -22,7 +22,7 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Ишуткинэнь Николай''' ({{Lang-ru|Николай Иванович Ишуткин}}) ([[панжиковонь 28 чи]] [[1954 ие]] [[Покш Килейбуе]]сэ [[Симкина веле]]сэ) — эрзянь содавикс валморозей, прозаикесь, кулянь сёрмадей, прявт-редактор [[«Чилисема» (журнал)|«Чилисема» ковставксонть]].
+'''Ишуткинэнь Николай''' ({{Lang-ru|Николай Иванович Ишуткин}}) ([[панжиковонь 28 чи]] [[1954 ие]] [[Покш Килейбуе]]сэ [[Симкина веле]]сэ) — эрзянь<ref name="Время и события. 2014">Время и события. 2014: библиографический указатель / Нац. б-ка им. А.С. Пушкина Респ. Мордовия; [сост. А.Н. Маланьчева]. – Саранск, 2013. – 148 с. {{Ref-ru}}</ref> содавикс валморозей, прозаикесь, кулянь сёрмадей, прявт-редактор [[«Чилисема» (журнал)|«Чилисема» ковставксонть]].
 
 == Эстедензэ ==
 Николай Ишуткин чачсь [[Покш Килейбуе]]ень Симкина велесэ, кона ашти [[Сура лей|Сура леенть]] эйстэ а пек васоло. Тетясь валморозеенть ульнесь тонавтыцякс, авазо вейсхозсо важодицякс. Куншка школань прядомадо мейле тонавтнесь Н.П. Огарёвонь лемсэ Мордовской прявтуниверситетэнь филологиянь факультетсэ. Тосо тонавтнемстэ ушодсь сёрмадомань а шожда кинть лангс: кучнесь тешкставкст ды сёрмадовкст кулялопас. [[1973 ие]]стэ лиссть васень валморонзо («Од пора» ды «Килейне») «Сятко» ковставксо. Тень редизь «Эрзянь правдань» сестэнь прявттнэ ды университетэнь прядомадо мейле тердизь важодеме редакцияв. 
@@ -31,7 +31,7 @@
 
 [[1995 ие]]стэ совавтозель Россиянь Сёрмадеень Пурнавксос. [[1999 ие]]стэ тензэ максови «Мордовия Республикань культурань заслуженной важодиця» покш лемесь. 
 
-Николай Иванович Ишуткин ламо важоди одтнэнь марто, эрси ушодыця литераторонь эрьва иень семинаронь секциянь прявтокс, якси кода Мордовиянь, истя сонзэ томбале аштиця эрзянь велетневаяк, вешни од лемть. [[Суоми-угрань раськеть|Суоми-угрань раське]]ютконь сёрмадеень ассоциациянь правлениянь член, кочказь Россиянь суоми-угрань кулянь-сёрмадеень вейсэндявксонь секретариатс. 
+Николай Иванович Ишуткин ламо важоди одтнэнь марто, эрси ушодыця литераторонь эрьва иень семинаронь секциянь прявтокс, якси кода Мордовиянь, истя сонзэ томбале аштиця эрзянь велетневаяк, вешни од лемть. [[Суоми-угрань раськеть|Суоми-угрань раське]]ютконь сёрмадеень ассоциациянь правлениянь член, кочказь Россиянь суоми-угрань кулянь-сёрмадеень вейсэндявксонь секретариатс<ref name="«Чилисема» ">«Чилисема» ковставксось №5, 2011 ие. лоп. 18 {{Ref-myv}}</ref>. 
 
 == Шкинемазо ==
 ===Эрзянь кельсэ===
@@ -51,8 +51,9 @@
 ==Ванмо==
 * [https://www.youtube.com/watch?v=leSzuiiJkQQ Творческий вечер Ишуткина Н. И.{{ref-myv}}, {{ref-ru}}]
 
-==Сёрм.==
-* «Чилисема» ковставксось №5, 2011 ие. лоп. 18
+==Лисьм.==
+<references />
+
 [[Category:Ломанть|И]]
 [[Category:Эрзянь кель|И]]
 [[Category:Эрзянь сёрмадейть|И]]
