--- a/Ламбаське_(Ицял_буе).mw
+++ b/Ламбаське_(Ицял_буе).mw
@@ -68,7 +68,7 @@
 Ламбаське велесэ чачсть:
 * [[Адушкин, Виктор Алексеевич|Виктор Адушкин]]<ref name="«Республика молодая»"/> — юстициянь генерал-лейтенант 
 *[[Галаев, Петр Васильевич|Петр Галаев]]<ref name="МООБУ «Лобасковская">[http://lobaski.edurm.ru/p13aa1.html МООБУ «Лобасковская основная общеобразовательная школа» Ичалковского муниципального района Республики Мордовия:Общие сведения об образовательном учреждении]{{ref-ru}}</ref>— кирдивийсэ важодсь
-* [[Горбунов, Василий Владимирович|Василий Горбунов]]<ref name="«Республика молодая»"/> — филологиянь наукань доктор, профессор,
+* [[Горбунов, Василий Владимирович|Василий Горбунов]]<ref name="«Республика молодая»"/> (сёрмадеень лем: '''Пургине'''<ref name="Время и события. 2014">Время и события. 2014: библиографический указатель / Нац. б-ка им. А.С. Пушкина Респ. Мордовия; [сост. А.Н. Маланьчева]. – Саранск, 2013. – 148 с. {{Ref-ru}}</ref>) — филологиянь наукань доктор, профессор,
 * [[Прончатов, Иван Николаевич|Иван Прончатов]]<ref name="«Республика молодая»"/><ref name="Библиотека">[http://www.lib.e-mordovia.ru/Library/?Char=%CF&id=9 Библиотека Мордовской Литературы:Прончатов Иван Николаевич]{{ref-ru}}</ref>— эрзянь валморозей.
 * [[Рябовонь, Анатолий Павлович|Анатолий Рябов]]<ref name="«Республика молодая»">[http://rm.saransk.ru/?id_refer=3034 газета «Республика молодая» село Лобаски, Ичалковский район]{{ref-ru}}</ref><ref name="philol">[http://www.philol.msu.ru/~smu/work/science-day/2011/30.pdf Данильчев Александр Алексеевич «Эрзянско-русский словарик» и «Русско-эрзянский словарь» А. П. Рябова.]{{ref-ru}}</ref> — эрзянь профессор, ламо келень содыця, васенце Эрзянь букварень пурныця-нолдыця. 
 * [[Рябов, Владимир Павлович|Владимир Рябов]]<ref name="«ПОБЕДА»">[http://pobeda-rom.ucoz.ru/news/da_obretut_pokoj_stradavshie_telesno/2013-08-16-175 Газета «ПОБЕДА» Да обретут покой страдавшие телесно]{{ref-ru}}</ref> — эрзянь тонавтыця, ламо келень содыця, омбо масторонь кельс ютавтыця.
