--- a/Пазава.mw
+++ b/Пазава.mw
@@ -1,3 +1,5 @@
+[[Артовкс:Aphrodite swan BM D2.jpg|thumb |100px|<!-- Aphrodite -->]]
+
 '''Пазава''' — тееезь кавто валсто: ''[[паз]]'' + ''[[ава]]''.
 
 Ломанень теемадо моронь морокерьксэнть [[Инешкипаз|Инешкипазось]] теи [[4 (ниле)|ниле]] паз-ават:
