--- a/Ведьава.mw
+++ b/Ведьава.mw
@@ -1,8 +1,8 @@
+[[Артовкс:Rusalka Bilibin.jpg|thumb |Ве́дьава - [[Ivan Bilibin]], [[1934 ие|1934]]]]
+
 '''Ве́дьава''' — ведень кирдиця, азорава; [[Вечкема|вечкемань]] [[Пазава]]. 
 
 Ведьава валось лиси [[2 (кавто)|кавто]] валтнень эйстэ — ''[[Ведь|«ведь»]]'' ды ''[[Ава|«ава»]].'' Теде башка веденть ульнесь Атянь Веденькирди — '''Ведьатя'''.
-
-
 
 == Ванодо истяжо ==
 {{commonscat|Rusalka}}
