*Empty MediaWiki Message*

--- a/Куконькай.mw
+++ b/Куконькай.mw
@@ -39,7 +39,7 @@
 | grin             = 
 | ipni              = 
 }}
-'''Куконькай<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}}, {{ref-myv}}</ref>''' (лат. ''Chenopódium'', {{lang-ru| ''Марь''}}) — вейк-, кавто-, седе сеетьстэ ламоиень [[тикше]]нь касыцят, пелькуракшт, седе сеетьстэ  — куракшт ды чувтт [[Ципирькай|Ципирькаень]]<ref name="Русско-эрзянский ботанический"/> семиянь (''Amaranthaceae''). 
+'''Куконькай<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}}, {{ref-myv}}</ref>''' (лат. ''Chenopódium'', {{lang-ru| ''Марь''}}) — вейке-, кавто-, седе сеетьстэ ламоиень [[тикше]]нь касыцят, пелькуракшт, седе сеетьстэ  — куракшт ды чувтт [[Ципирькай|Ципирькаень]]<ref name="Русско-эрзянский ботанический"/> семиянь (''Amaranthaceae''). 
 
 [[Россия]]со касыть малав 30 видт. Кой-конат куконькатьнестэ [[паксянь тикшеть]], молить [[ярсамопель]]с, эфирэнь ойекс. Кой-кона куконькатненеь мерить [[марч]], ансяк те аволь истя.  
 
