*Empty MediaWiki Message*

--- a/Вишка_Эрьмезёнка_(Чаунзабуе).mw
+++ b/Вишка_Эрьмезёнка_(Чаунзабуе).mw
@@ -69,9 +69,9 @@
 
 == Содавикс ломанть те велестэнть ==
 Вишка Эрьмезёнка велесэ чачсть:
+* [[Алтышкин, Виктор Леонидович|Виктор Алтышкин]]<ref name="Время и события. 2014">Время и события. 2014: библиографический указатель / Нац. б-ка им. А.С. Пушкина Респ. Мордовия; [сост. А.Н. Маланьчева]. – Саранск, 2013. – 148 с. {{Ref-ru}}</ref> — содавикс эрзянь валморозей, прозаик.
 
-
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть]]
