--- a/Агейкин,_Григорий_Петрович.mw
+++ b/Агейкин,_Григорий_Петрович.mw
@@ -29,7 +29,7 @@
 Григорий Петрович Агейкин чачсь 1924 иень ацамковонь 1-це чистэ Кочкурова буень Кочкур велесэ<ref name="Чилисема"/>. Семиясост ульнесть сисем эйкакшт: вете цёракайть ды тейтерька, покштнень марто вейсэ видсть-сокасть, андсть ракшат, лазность пенгеть. Уш школасо тонавтнемстэ Гриша варчизе валморонь сёрмадоманть, сынь печатазельть школань кулялопас. Кочкуровав сеедьстэ сакшность [[Зиньков, Алексей Фёдорович|Алексей Зиньков]]<ref name="Время и события. 2014">Время и события. 2014: библиографический указатель / Нац. б-ка им. А.С. Пушкина Респ. Мордовия; [сост. А.Н. Маланьчева]. – Саранск, 2013. – 148 с. {{Ref-ru}}</ref>, Илья Кривошеев, [[Григошин, Яков Пахомович|Яков Григошин]] ды лия содавикс эрзянь сёрмадыцятне. Гриша невтинзе тенст эсинзэ валморонзо. Шкань ютазь сась каршо вал [[Кривошеев, Илья Петрович|И.Кривошеевень]] пельде, сон шнынзе Агейкинэнь сёрмадовксонзо, сынь печатазельть [[Сятко (журнал-ковставкс)|«Сятко» ковставксонть]].
 
 1941 иестэ Г.П.Агейкин тусь фронтов<ref name="ИМ">[http://izvmor.ru/news/view/2482670 «Известия Мордовии»: ￼В год литературы кочкуровцы читают произведения своих земляков-писателей] {{Ref-ru}}</ref>, кудов велявтсь ансяк 1947 иестэ. Ульнесь разведчикекс, гвардеецэкс. Войнадо мейле тонавтнесь партийной школасо, мейле прядызе Н.П.Огарёв лемсэ МГУ-нь филологиянь факультетэнть. Ламо иеть важодсь «Советская Мордовия» ды [[«Эрзянь правда» (кулялопа)|«Эрзянь правда»]] кулялопатнесэ. Ульнесь «Пионерэнь вайгель» ковставксонть редакторокс, ветясь «Сэменть».
-«Эрзянь правда» газетасо важодемстэ Г.Агейкин сёрмадсь «Пингень эскелькст» статья, конасонть ёвтневи газетанть историядонзо.
+[[«Эрзянь правда» (кулялопа)|«Эрзянь правда» газетасо]] важодемстэ Г.Агейкин сёрмадсь «Пингень эскелькст» статья, конасонть ёвтневи газетанть историядонзо.
 
 == Сёрмадовксонзо ==
 Сёрмадовкссонзо Агейкин ёвтни ламо раськетнень ютксо ялгаксчиде, тиринь ёнксонь мазычиде, вечкемадо, важодемадо. Вана коневпурнавксонзо<ref name="Чилисема">[http://chilisema.ru/upload/iblock/b7b/5-15-ilovepdf-compressed.pdf  «Чилисема» ￼2015ие  №5, АГЕЙКИН Григорий Петрович] {{Ref-myv}}</ref>  : 
