--- a/Рябовонь,_Анатолий_Павлович.mw
+++ b/Рябовонь,_Анатолий_Павлович.mw
@@ -40,7 +40,7 @@
 
 Морамотнесэ сеедьстэ ульнесть покш ломантькак, примеркс, искусствасо реформаторось В. Э. Мейерхoльд, кона ульнесь «чавозь» эрзя моротнень мазычисэ. Сон пек вечкилинзе А. П. Рябовонь хоронть эрзянь моротнень.
 
-1926-це иестэ панжови эрзянь ды мокшонь клуб Марьиной Рощасо, прявтокс путозель А. П. Рябов. Те клубось теевсь эрзянь келень, литературань ды культурань центракс. Свал инжекс ульнесть тесэ [[Артур Моро|Артур Моро]], [[Никул Эркай|Никул Эркай]], [[Лукьянов, Алексей Миронович|А. Лукьянов]], [[Григошин Я.|Я. Григошин]], [[Чесноков Ф.|Ф.Чесноков]] ды ламо лия сёрмадыцят. А. П. Рябов свал вансь од ломантнень касомаст мельга.
+1926-це иестэ панжови эрзянь ды мокшонь клуб Марьиной Рощасо, прявтокс путозель А. П. Рябов. Те клубось теевсь эрзянь келень, литературань ды культурань центракс. Свал инжекс ульнесть тесэ [[Артур Моро|Артур Моро]], [[Никул Эркай|Никул Эркай]], [[Лукьянов, Алексей Миронович|А. Лукьянов]], [[Григошин, Яков Пахомович|Яков Григошин]], [[Чесноков, Фёдор Маркелович|Фёдор Чесноков]] ды ламо лия сёрмадыцят. А. П. Рябов свал вансь од ломантнень касомаст мельга.
 
 == Саран ошсо. Эрзянь келень кепедема шка ==
 
