*Empty MediaWiki Message*

--- a/Шугур_веле_(Покш_Килейбуе).mw
+++ b/Шугур_веле_(Покш_Килейбуе).mw
@@ -68,18 +68,18 @@
 
 ==Содавикс ломанть те велестэнть==
 Чугыр велесэ чачсть:
-* П. Е. Елушев — Гражданской ойнань 1670—1671 ии. улиця
-* И. Л. Арапов — ({{Lang-ru|полный Георгиевский кавалер}})
-* Н. В. Камаев — Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}}).
+* П. Е. Елушев<ref name="Эрзянь Мастор479"/> — Гражданской ойнань 1670—1671 ии. улиця
+* И. Л. Арапов<ref name="Эрзянь Мастор479">[http://www.erzia.saransk.ru/arhiv.php?n=5603&nom11=479  «Эрзянь Мастор» 15.08.2016, №479,  ОН БЫЛ ЭРЗЯНИНОМ] {{Ref-ru}}</ref> — ({{Lang-ru|полный Георгиевский кавалер}})
+* Н. В. Камаев<ref name="Эрзянь Мастор479"/> — Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}}).
 * И. И. Абрамов — ({{Lang-ru|председатель Государственного комитета Республики Мордовия по управлению государственным имуществом}})
-* А. Г. Осипов — заслуженной МВД СССР-нь важодиця
-* И. В. Осипов — партиянь важодиця 
-* В. И. Дёмин — литератураньветиця
-* Н. В. Зиновьев —  филологиянь наукань кандидат
-* Г. Г. Поляков — техник-строитель
-* П. С. Ромашкин — юрист
-* М. Ф. Лияскин — шофер
-* Л. Г. Ефимкина — шожда атлет
+* А. Г. Осипов<ref name="Эрзянь Мастор479"/> — заслуженной МВД СССР-нь важодиця
+* И. В. Осипов<ref name="Эрзянь Мастор479"/> — партиянь важодиця 
+* В. И. Дёмин<ref name="Эрзянь Мастор479"/> — литератураньветиця
+* Н. В. Зиновьев<ref name="Эрзянь Мастор479"/> —  филологиянь наукань кандидат
+* Г. Г. Поляков<ref name="Эрзянь Мастор479"/> — техник-строитель
+* [[Ромашкин, Петра Семенович|Пётр Ромашкин]]<ref name="Эрзянь Мастор479"/> — юрист
+* М. Ф. Лияскин<ref name="Эрзянь Мастор479"/> — шофер
+* Л. Г. Ефимкина<ref name="Эрзянь Мастор479"/> — шожда атлет
 
 == Сёрм.: ==
 <references />
