*Empty MediaWiki Message*

--- a/Обиница_(Меремяэ_буе).mw
+++ b/Обиница_(Меремяэ_буе).mw
@@ -72,7 +72,7 @@ Obinitsa_lipud.JPG|Суоми-угрань раськетьнень коцтос
 Grupifoto Obinitsas.JPG|2015 иень умарьковонь 1-4 читнестэ ютась II суоми-угрань вики-семинар. Васеньце важодема чись ушодовсь Обиницясто.
 </gallery>
 
-==Сёрм. ==
+==Лисьм. ==
 <references />
 {{stub}}
 {{Меремяэнь вельтне}}
