*Empty MediaWiki Message*

--- a/Панжиковонь_7_чи.mw
+++ b/Панжиковонь_7_чи.mw
@@ -18,6 +18,8 @@
 
 == Кулость ==
 ''Вн. истяжо: [[:Категория:Кулозь панжиковонь 7 чи]]''
+==Лисьм. ==
+<references />
 
 {{commons|May 7|панжиковонь 7 чи}}
 
