*Empty MediaWiki Message*

--- a/Журавлёвонь,_Числав_Григорьевич.mw
+++ b/Журавлёвонь,_Числав_Григорьевич.mw
@@ -23,7 +23,7 @@
  |википурнавкс         = 
 }}
 
-'''Журавлёвонь Числав Григорьевич''' ([[1935 ие]]нь [[Чадыковонь 27 чи]]стэ [[Самарань ёнкс|Самарань ёнксонь]] [[Похвистневань буе Самарань ёнксcо|Похвистнева буе]]нь [[Покш Толкан веле (Похвистнева буень)|Покш Толкан]] велесэ) — [[Эрзя|эрзянь]] сёрмадей ды валморозей.
+'''Журавлёвонь Числав Григорьевич''' ([[1935 ие]]нь [[Чадыковонь 27 чи]]стэ [[Самарань ёнкс|Самарань ёнксонь]] [[Похвистневань буе Самарань ёнксcо|Похвистнева буе]]нь [[Покш Толкан веле (Похвистнева буень)|Покш Толкан]] велесэ) — [[Эрзя|эрзянь]]<ref name="Время и события, 2010">Время и события. 2010 Библиографический указатель. Указ Главы Республики Мордовия{{ref-ru}}</ref> сёрмадей ды валморозей.
 
 == Эстедензэ ==
 Школадо мейле прядызе Вишка Толканонь педучилищанть ды кармась важодеме Кошкинань буень Чесноковка велень школасо физкультурань тонавтыцякс. Колмо иеть (1954—1957) служась армиясо, теде мейле кемень иень перть важодсь Сибирьсэ зярыя таркава  ды эрьва кодамо важодемасо. 1967-це иестэ велявтсь Самарав. Волгоградонь физической культурань институтонть прядомадо мейле пенсияв туемазонзо важодсь физкультурань учителекс школасо.
@@ -57,9 +57,10 @@
 * Сонзэ сёрмадовксонзо: [[«Эрзянь кель» (валморо)|'''«Эрзянь кель»''']]
 *[http://www.youtube.com/watch?v=yFOS6JIkguE Большой Толкай - село «мордовское» (ванмо)]
 *[http://www.youtube.com/watch?v=fKZE4xNBTcs Хочу, чтобы весь мир узнал, что есть такой народ - эрзя (ванмо)]
- 
-== Сёрм.: ==
-* Журавлёв Ч. Вечкемань теште. 3 томсо. — Саранск: Тип. "Крас .Окт.", [[2000]]. 480 с. 
+
+ ==Лисьм. ==
+<references />
+
 
 [[Category:Ломанть|Ж]]
 [[Category:Эрзянь валморонь ладсийть|Ж]]
