--- a/Калинкин,_Иван_Алексеевич.mw
+++ b/Калинкин,_Иван_Алексеевич.mw
@@ -22,17 +22,17 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Калинкин Иван Алексеевич''' ([[1935 ие]]нь [[аштемковонь 23 чи]]стэ [[Ульянонь ёнкс]]онь [[Инзейбуе]]нь [[Чей веле (Инзейбуе)|Чей веле]]сэ) — [[Эрзя|эрзянь]] сёрмадей ды валморозей.
+'''Калинкин Иван Алексеевич''' ([[1935 ие]]нь [[аштемковонь 23 чи]]стэ [[Ульянонь ёнкс]]онь [[Инзейбуе]]нь [[Чей веле (Инзейбуе)|Чей веле]]сэ) — [[Эрзя|эрзянь]]<ref name="Время и события, 2010">Время и события. 2010 Библиографический указатель. Указ Главы Республики Мордовия{{ref-ru}}</ref> сёрмадей ды валморозей.
 == Эстедензэ ==
-Чачсь [[1935 ие]]нь [[аштемковонь 23 чи]]стэ [[Ульянонь ёнкс]]онь [[Инзейбуе]]нь [[Чей веле (Инзейбуе)|Чей веле]]сэ. Тетязо-авазо ульнесть вейсхозонь важодицякс. Ойнань ушодомсто тетязо тусь олячинть тюреманть кис, ды маштовсь 1944 иестэ. Стакачитнестэ аванзо марто Иван Калинкин туить эрямо [[Покш Игнадбуе]]в [[Мордовия]]в, васняяк Семеновка ды Коммунары посёлкатнесэ, мейле Покш Игнад велесэ.
+Чачсь [[1935 ие]]нь [[аштемковонь 23 чи]]стэ [[Ульянонь ёнкс]]онь [[Инзейбуе]]нь [[Чей веле (Инзейбуе)|Чей веле]]сэ<ref name="Библиотека">[http://www.lib.e-mordovia.ru/Library/?Char=%CA&id=1 Библиотека мордовской литературы. Калинкин Иван Алексеевич ]{{ref-ru}}</ref>. Тетязо-авазо ульнесть вейсхозонь важодицякс. Ойнань ушодомсто тетязо тусь олячинть тюреманть кис, ды маштовсь 1944 иестэ. Стакачитнестэ аванзо марто Иван Калинкин туить эрямо [[Покш Игнадбуе]]в [[Мордовия]]в, васняяк Семеновка ды Коммунары посёлкатнесэ, мейле Покш Игнад велесэ.
 Тонавтнесь Покш Игнадбуень Спассонь куншкань школасо, служась армиясо.  1956 - 1959 иетнестэ тонавтнесь Орданьбуень культпросветшколасо. Прядоманзо мейле ульнесь [[Ташто Чамза (Покш Игнадбуень)|Ташто Чамзань]]<ref>[http://nsportal.ru/shkola/russkiy-yazyk/library/2015/03/16/urok-vneklassnogo-chteniya-v-7-klasse-lyubov-k-rodine-v Любовь к Родине в творчестве поэтов Мордовии] {{ref-ru}}</ref> клубонь ветицякс. 
 Эйзюрковонь 1959 иестэ ульнесь тердезь важодеме «Знамя труда» покшигнадбуень кулялопантень. Ульнесь литважодицякс «Маяк» орданьбуень кулялопанть, [[Рамаданбуе|Рамаданонь]] - «Победа» кулялопанть, ды мейле  «Восход» покшигнадбуень кулялопантень. 1970 иестэ ульнесь путозь сонзэ пряв-редакторокс.
 1972 иень ушодомсто туи эрямо Саран ошов. Важоди [[«Эрзянь правда» (кулялопа)|«Эрзянь правда»- со]], мейле [[Сятко (журнал-ковставкс)|«Сятко»-со]] секретарекс, 1977 иестэ 1984 иес — сонзэ пряв-редакторокс.
 
 
-== Сёрм.: ==
-* [http://www.lib.e-mordovia.ru/Library/?Char=%CA&id=1 Калинкин Иван Алексеевич (ЛОВНОМА) {{ref-ru}}]
+== Лисьм.: ==
 <references />
+
 
 
 [[Category:Эрзянь валморонь ладсийть|К]]
