--- a/Беззубова,_Фёкла_Игнатьевна.mw
+++ b/Беззубова,_Фёкла_Игнатьевна.mw
@@ -24,7 +24,7 @@
 }}
 '''Фёкла Игнатьевна Беззубова'''(1880 [[таштамковонь 26 чи]]стэ Од Мурзасо ([[Кочкурбуе]]сэ) - [[1966]]  [[панжиковонь 12 чи]]стэ ) — [[Эрзянь кель|эрзянь]] кельсэ содавикс ёвксонь морыця-лациця.
 
-Чачсь [[1880]]-це иень [[таштамковонь 26 чи]] чистэ [[Од Мурза (Кочкурбуе)|Од Мурзасо]] ([[Кочкурбуе]]сэ). Лемдизь церьковань койсэ Фёклакс. Ансяк [[эрзят]]не а вечксызь ''ф'' гайтенть, а стяко сонзэ эйсэ ушодовиця валткак кельсэнек, ловт, арасть. Тейтернентень кармасть мереме эрзякс: ''Сёка''. Кияк сестэ, чарькодеви, эзь сода: сон минек сы шкань морыцянок, мазычинь невтицянок.
+Чачсь [[1880]]-це иень [[таштамковонь 26 чи]] чистэ [[Од Мурза (Кочкурбуе)|Од Мурзасо]]<ref name="Время и события, 2010"/> ([[Кочкурбуе]]сэ). Лемдизь церьковань койсэ Фёклакс. Ансяк [[эрзят]]не а вечксызь ''ф'' гайтенть, а стяко сонзэ эйсэ ушодовиця валткак кельсэнек, ловт, арасть. Тейтернентень кармасть мереме эрзякс: ''Сёка''. Кияк сестэ, чарькодеви, эзь сода: сон минек сы шкань морыцянок, мазычинь невтицянок.
 
 Кассь тейтересь, максызь мирденень, тусть эйкакшт. Эрямось мольсь а шождасто. Стакачитнеде истякак байтяк ульнесть, текень пес ушодовсь [[1914]]-це иень войнась, мирденть саизь. Мейле революциясь, гражданской войнась. Ансяк неть коволтнэнь энгамомадо мейле, зярдо аламодо сэтьме чудильмас совась эрямось, редязель Сёкань покштояк покш ёрокчизэ: сон содась ламо [[моро]]т, [[ёвтамо|ёвтамот]], одирьвань урнемат-аварькшнемат, мазыйстэ морыль, вадрясто лайшиль, сонськак маштыль моронь ладсеме. Тень пингстэ тунь а содыль сёрмас. Эрзянь сёрмадыцятнень прявтост А.Я. Дорогойченко явсь покш мель ёроков авантень: аравтовтсь мельганзо сёрмадыцят. [[1939]] иестэ нолдазель моронь васенце пусминесь, конань лангсо аштесь лем: '''''Ф.И. Беззубова'''''. Се шкастонть саезь Сёка патясь свалшкас совась эрзянь раськенть эрямозонзо. Ризнэзь-мелявтозь пачтясь сон од пингедензэ:<br />{{Цитатань ушодома}}''Од пингем ютась, прок чаво варма,<br />
 ''Од вийнем солась, прок тундонь ловне.<br />
@@ -37,9 +37,14 @@
 
 1941 — 45 тюремань иетнестэ Беззубова ладсесь ёвтамот, морот, конатнесэ невтинзе ломантнень ёжомарямост, фашисттнэнень а вечкеманть. Артистэнь бригадасо сонзэ сайнизь фронтовгак, зярыяксть морась солдаттнэнь икеле.
 
-XX пингенть 50-це иетнестэ, сыречинзэ лангс апак вано, Сёка патясь тонавтнесь ловномо ды сёрмадомо. Теде икеле сонзэ мельга сёрмадыцякс ульнекшнэсть [[Абрамовонь, Кузьма Григорьевичесь|Абрамов]], Платонов, [[Радаевень, Василий Кузьмич|Радаев]], Карасев, Кавтаськин, Гайни ды цёразо Беззубов Василий. Неень шкане стака мукшномс, кона моротнень кие мельганзо сёрмадынзе: сестэ секретаренть лемензэ эзть тешта, кедьсёрмадовкстнэ эзть ванстово. Беззубова казезель кавто орденсэ, медальсэ. 
+XX пингенть 50-це иетнестэ, сыречинзэ лангс апак вано, Сёка патясь тонавтнесь ловномо ды сёрмадомо. Теде икеле сонзэ мельга сёрмадыцякс<ref name="Библиотека Беззубова">[http://www.lib.e-mordovia.ru/Library/?Char=%C1&id=4 Библиотека мордовской литературы. Беззубова Фекла Игнатьевна]{{ref-ru}}</ref> ульнекшнэсть [[Абрамовонь, Кузьма Григорьевичесь|Абрамов]], Платонов, [[Радаевень, Василий Кузьмич|Радаев]], Карасев,  [[Кавтаськин, Лука Семенович|Кавтаськин]], [[Гайни Пётр|Гайни]] ды цёразо Беззубов Василий. Неень шкане стака мукшномс, кона моротнень кие мельганзо сёрмадынзе: сестэ секретаренть лемензэ эзть тешта, кедьсёрмадовкстнэ эзть ванстово. Беззубова казезель кавто орденсэ, медальсэ. 1940 иень умарьковонь 25 чистэ Беззубованьне ульнесь максозь Мордовской АССР-нь раськень морыцянь лем<ref name="Время и события, 2010">Время и события. 2010 Библиографический указатель. Указ Главы Республики Мордовия{{ref-ru}}</ref>.
 
 Кулось Сёка патясь [[1966]] иень [[панжиковонь 12 чи|панжиковонь 12]]-це чистэ. Сонзэ лем ало лиссть 10 книгат эрзянь ды рузонь кельсэ, сондензэ сёрмадозь ламо статьят, косо  ванкшновить весе ладсевксэнзэ. Неть книгатне-кирьяпусмотьне улить ловномакудосова-библиотекасо.
+
+
+==Лисьм. ==
+<references />
+{{stub}}
 
 [[Category:Эрзянь сёрмадейть|Б]]
 [[Category:Эрзянь валморонь ладсийть|Б]]
