*Empty MediaWiki Message*

--- a/Беззубова,_Фёкла_Игнатьевна.mw
+++ b/Беззубова,_Фёкла_Игнатьевна.mw
@@ -1,6 +1,6 @@
 {{Ломанесь
  |лем                  = Фёкла Беззубова
- |оригинальной лем      = 
+ |оригинальной лем      = Сёка патя
  |чачома лем         = Фёкла Игнатьевна Беззубова
  |артовкс              = 
  |артовксонть покшолмазо   = 
@@ -22,7 +22,7 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Фёкла Игнатьевна Беззубова'''(1880 [[таштамковонь 26 чи]]стэ Од Мурзасо ([[Кочкурбуе]]сэ) - [[1966]]  [[панжиковонь 12 чи]]стэ ) — [[Эрзянь кель|эрзянь]] кельсэ содавикс ёвксонь морыця-лациця.
+'''Фёкла Игнатьевна Беззубова''', кортнема лем: '''Сёка патя''' (1880 [[таштамковонь 26 чи]]стэ Од Мурзасо ([[Кочкурбуе]]сэ) - [[1966]]  [[панжиковонь 12 чи]]стэ ) — [[Эрзянь кель|эрзянь]] кельсэ содавикс ёвксонь морыця-лациця.
 
 Чачсь [[1880]]-це иень [[таштамковонь 26 чи]] чистэ [[Од Мурза (Кочкурбуе)|Од Мурзасо]]<ref name="Время и события, 2010"/> ([[Кочкурбуе]]сэ). Лемдизь церьковань койсэ Фёклакс. Ансяк [[эрзят]]не а вечксызь ''ф'' гайтенть, а стяко сонзэ эйсэ ушодовиця валткак кельсэнек, ловт, арасть. Тейтернентень кармасть мереме эрзякс: ''Сёка''. Кияк сестэ, чарькодеви, эзь сода: сон минек сы шкань морыцянок, мазычинь невтицянок.
 
@@ -37,7 +37,22 @@
 
 1941 — 45 тюремань иетнестэ Беззубова ладсесь ёвтамот, морот, конатнесэ невтинзе ломантнень ёжомарямост, фашисттнэнень а вечкеманть. Артистэнь бригадасо сонзэ сайнизь фронтовгак, зярыяксть морась солдаттнэнь икеле.
 
-XX пингенть 50-це иетнестэ, сыречинзэ лангс апак вано, Сёка патясь тонавтнесь ловномо ды сёрмадомо. Теде икеле сонзэ мельга сёрмадыцякс<ref name="Библиотека Беззубова">[http://www.lib.e-mordovia.ru/Library/?Char=%C1&id=4 Библиотека мордовской литературы. Беззубова Фекла Игнатьевна]{{ref-ru}}</ref> ульнекшнэсть [[Абрамовонь, Кузьма Григорьевичесь|Абрамов]], Платонов, [[Радаевень, Василий Кузьмич|Радаев]], Карасев,  [[Кавтаськин, Лука Семенович|Кавтаськин]], [[Гайни Пётр|Гайни]] ды цёразо Беззубов Василий. Неень шкане стака мукшномс, кона моротнень кие мельганзо сёрмадынзе: сестэ секретаренть лемензэ эзть тешта, кедьсёрмадовкстнэ эзть ванстово. Беззубова казезель кавто орденсэ, медальсэ. 1940 иень умарьковонь 25 чистэ Беззубованьне ульнесь максозь Мордовской АССР-нь раськень морыцянь лем<ref name="Время и события, 2010">Время и события. 2010 Библиографический указатель. Указ Главы Республики Мордовия{{ref-ru}}</ref>.
+XX пингенть 50-це иетнестэ, сыречинзэ лангс апак вано, Сёка патясь тонавтнесь ловномо ды сёрмадомо. Теде икеле сонзэ мельга сёрмадыцякс<ref name="Библиотека Беззубова">[http://www.lib.e-mordovia.ru/Library/?Char=%C1&id=4 Библиотека мордовской литературы. Беззубова Фекла Игнатьевна]{{ref-ru}}</ref> ульнекшнэсть [[Абрамовонь, Кузьма Григорьевичесь|Абрамов]], Платонов, [[Радаевень, Василий Кузьмич|Радаев]], Карасев,  [[Кавтаськин, Лука Семенович|Кавтаськин]], [[Гайни Пётр|Гайни]] ды цёразо Беззубов Василий. Неень шкане стака мукшномс, кона моротнень кие мельганзо сёрмадынзе: сестэ секретаренть лемензэ эзть тешта, кедьсёрмадовкстнэ эзть ванстово. 
+
+Сех содавиксэв «Сталиндэ моронть» лайшемадонть сёрмады [[Горбунов, Василий Владимирович|Василий Горбунов]]<ref name="Изнямо1951_10">«Изнямо» ЭРЗЯНЬ ХУДОЖЕСТВЕННОЙ ЛИТЕРАТУРАНЬ АЛЬМАНАХ. – 1951 ие. – 10-це №. 198-219 лоп. В. Горбунов Келенть коряс Сталин ялганть тонавтомазо ды мордовской литературнать касомань вопростнэ{{ref-myv}}</ref>(сёрмадома лувось кадозь авторонть): {{Цитатань ушодома}}Сюпавдояксюпав курксто-куркс раськень шкинеманть ютксто эсест седей лембесэст ды художественной вийсэст явовить  сказительтнень ды сказительницатнень морост ды ёвтамост, конат алтазь Лениннэнь ды Сталиннэнь. Сынст характерэст, идейной томкачист ды седеень пек покш лембест чарькодевить «Сталиндэ моронть» кувалт, конань складизе Фёкла Игнатьевна Беззубова. Фёкла Игнатьевна Беззубова, весе эрзянь народонть арсеманзо ды ёжонзо ёвтазь, Сталин ялганть образонзо лови чинть коряс питнейкс. Минек Родинань весе народтнэнь марто вейсэ мордовской народось Сталин ялганть лови эсензэ ине оякс. Сталин ялганть апак лотксе заботанзо кувалт мордовской народонть эрямозо теевсь мазыйкс, сюпавокс ды культурнойкс, секс народонть Сталин ялгантень благодарностень ёжонзо певтеметь. Эрьва труженикесь арси седе, штобу улемс Сталин ялганть великой заботантень достойнойкс. Од авась, васень эйдензэ- нурсезь, тошки тензе питней валт великой ломанденть, кона макссь народонтень валдо, лембе ды счастья; авась прянь шназь корты, што сонзэ цёранзо васень валокс ули народтнэнь. великой оянть лемесь, Сталинэнь лемесь:<br />
+''Тон кастая, монь цёрынем, <br />
+''Виевстэ, покшсто,<br />
+''Кода касы од тумнне<br />
+''Одс касы вирьсэ.<br />
+''Икелевгак Сталин валонть.<br />
+''Тон тень ёвтасак,<br />
+''Ды сурнэсэнть портретэнзэ<br />
+''Стенасто невтсак.<br /><br />''
+'''(Эрзянь Фольклор, стр. 342.)'''
+{{Цитатань пе}}
+
+
+Беззубова казезель кавто орденсэ, медальсэ. 1940 иень умарьковонь 25 чистэ Беззубованьне ульнесь максозь Мордовской АССР-нь раськень морыцянь лем<ref name="Время и события, 2010">Время и события. 2010 Библиографический указатель. Указ Главы Республики Мордовия{{ref-ru}}</ref>.
 
 Кулось Сёка патясь [[1966]] иень [[панжиковонь 12 чи|панжиковонь 12]]-це чистэ. Сонзэ лем ало лиссть 10 книгат эрзянь ды рузонь кельсэ, сондензэ сёрмадозь ламо статьят, косо  ванкшновить весе ладсевксэнзэ. Неть книгатне-кирьяпусмотьне улить ловномакудосова-библиотекасо.
 
