*Empty MediaWiki Message*

--- a/Гайни_Пётр.mw
+++ b/Гайни_Пётр.mw
@@ -22,13 +22,14 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Гайни Пётр Уварович''' (чачома буелемезэ: '''Поздяев''') ([[1910 ие]]нь [[таштамковонь 6 чи]]стэ  [[Алоошонь ёнкс|Алоошонь ёнксонь]] [[Лугаян буе]]нь [[Салманьбиё (Лугаян буе)|Салманьбиё]] велесэ — [[1968 ие]]нь [[ожоковонь 17 чи]]стэ [[Саран ош]]) — [[Эрзя|эрзянь]] сёрмадей ды валморозей.
+'''Гайни Пётр Уварович''' (чачома буелемезэ: '''Поздяев<ref name="Время и события, 2010"/>''') ([[1910 ие]]нь [[таштамковонь 6 чи]]стэ  [[Алоошонь ёнкс|Алоошонь ёнксонь]] [[Лугаян буе]]нь [[Салманьбиё (Лугаян буе)|Салманьбиё]] велесэ — [[1968 ие]]нь [[ожоковонь 17 чи]]стэ [[Саран ош]]) — [[Эрзя|эрзянь]]<ref name="Время и события, 2010">Время и события. 2010 Библиографический указатель. Указ Главы Республики Мордовия{{ref-ru}}</ref> сёрмадей ды валморозей.
 
-Чачсь [[1910 ие]]нь [[таштамковонь 6 чи]]стэ [[Алоошонь ёнкс|Алоошонь ёнксонь]] [[Лугаян буе]]нь [[Салманьбиё (Лугаян буе)|Салманьбиё]] велесэ. Горьковской рабфаконть прядомадо мейле сась [[Мордовия]]в. Васня важодсь [[Кочкур веле (Кочкур буе)|Кочкурвеле]]сэ — «Якстере колхоз» буенькулялопасо, мейле тонавтсь [[эрзянь кель]] ды литература Кемлянь вельхозтехникумсо [[Ицял буе|Ицялбуесэ]]. 
+Чачсь [[1910 ие]]нь [[таштамковонь 6 чи]]стэ [[Алоошонь ёнкс|Алоошонь ёнксонь]] [[Лугаян буе]]нь [[Салманьбиё (Лугаян буе)|Салманьбиё]] велесэ. Ушодома школанть прядомонзо мельга ульнесь ракшань ваныцянь лездыцякс<ref name="Библиотека Гайни (Поздяев)">[http://www.lib.e-mordovia.ru/Library/?Char=%C3&id=1 Библиотека мордовской литературы. Гайни (Поздяев) Петр Уварович]{{ref-ru}}</ref>. Горьковской рабфаконть прядомадо мейле сась [[Мордовия]]в. Васня важодсь [[Кочкур веле (Кочкур буе)|Кочкурвеле]]сэ — «Якстере колхоз» буенькулялопасо, мейле тонавтсь [[эрзянь кель]] ды литература Кемлянь вельхозтехникумсо [[Ицял буе|Ицялбуесэ]]. 
 
 Ине Оте­чественной войнань шкасто валморозеесь ульнесь «Советский воин» фронтовой кулялопань спецкорокс, танково-десантной ротань командирэкс. Казезь Якстере Тештень ды Отечественной вой­нань 1-це степенень ордентнэсэ. 
+
 П.Гайнинь войнань шкань валморонзо пешксеть эрямонь пси ойме коштсо, сынь лездасть тапамс ятонть. Валморсёрмаденть лириканзо лаказь лакась алкуксонь седей лембесэ, изнямонтень кемемасо.  
-Кудов велявтсь инвалидэкс. Войнадо мейле важодсь Мордкизсэ, радиокомитетсэ, [[«Эрзянь правда» (кулялопа)|«Эрзянь правда» кулялопанть]] редакциясо, сёрмалесь [[Сятко (журнал-ковставкс)|«Сятко»]]. 
+Кудов велявтсь инвалидэкс. Войнадо мейле важодсь Мордкизсэ, радиокомитетсэ, [[«Эрзянь правда» (кулялопа)|«Эрзянь правда» кулялопанть]] редакциясо, сёрмалесь [[Сятко (журнал-ковставкс)|«Сятко»-со]], «Ленинэнь киява» кулялопасо<ref name="Время и события, 2010"/>. 
 Вишкине ловныцятьненень Гайни эрзянь кельс ютавтокшнызе «Конёк-Горбунок» Ершовонь ёвксонть.
 == Сёрмадовксонзо ==
 Васенце валморозо «Кизэнь чи» ({{lang-ru|«Летний день»}}) лиси 1932 иестэ лугоянонь «Вейсэнь эрямо» ({{lang-ru|«Коллективная жизнь»}}) кулялопасонть. Васенце валморонь пусмозо Гайнинь «Гайгек, вайгель» ({{lang-ru|«Звени, голос»}}) лись 1933 иестэ. 1935 иестэ лись омбоцесь  «Уцяска» ({{lang-ru|«Счастье»}}), ков совавтозь ульнесь васенце поэмазо  «Кавто уцяскат» ({{lang-ru|«Два счастья»}}).
@@ -45,6 +46,50 @@
 
 Кулось валморозеесь [[1968 ие]]нь [[ожоковонь 17  чи]]стэ. Калмазь Саранскоень калмазырьсэ.
 
+
+==Шкинемазо<ref name="Время и события, 2010"/> ==
+===Эрзянь кельсэ ===
+# Изнямонь тундо; Стихть Сура лейденть; Минек сад лиресэ // Эрзянь правда. - 2000. - 7 сент. - С. 2.
+# Моря; «Тон помнясак…»; «Кода истя, мекс истя…»: стихть // Сятко. - 2000. - № 9. - С. 97-99.
+# Таня: поэма // Каторова, А. М. Тиринь литература: эрзянь школань 7-це классонь туртов учебник-хрестоматия / А. М. Каторова. - Саранск, 2002. - С. 236-243.
+# Ашо лов / валтнэ ды моравксось П. Гайнинь // Чилисема. - 2004. - № 2. - 4 с. обл.
+# Изнямонь тундо: стихть // Видманова, В. П. Родной литература: учебник-хрестоматия эрзянь школань 5-це класснэнь / В. П. Видманова, Е. И. Чернов; кемекстызе Мордовия Республикань Образованиянь министерствась. - Саранск, 2004. - С. 247-248.
+# Изнямонь тундо; Войнань кирвазтицятненень; Тонеть, ава: стихть; Дигаля: моро // Сятко. - 2005. - № 5/6. - С. 89-91.
+# Слава; Изнямонь тундо: стихть; Чачома мастор: ёвтнема //  Штыком и пером = Штыкса и пераса = Штыксэ ды перасо: хрестоматия: в 2 ч. / авт.-сост. Т. Ф. Сафонова-Телина; [отв. ред.: М. И. Ломшин, Т. И. Кубанцев]. - Саранск, 2005. - Ч. 2. Фронтовая летопись = Фронтовой летопись = Фронтовой летопись. - С. 147-156.
+# Чачома край: стихть // Брыжинский, М. И. Тиринь вал: эрзянь школань 6-це классонь туртов учебник-хрестоматия / М. И. Брыжинский, Н. Н. Брыжинская; кемекстызе Мордовия Республикань Образованиянь министерствась. - Саранск, 2005. - С. 188-189.
+# Петя-пионер: поэмасто саевкс // Чилисема. - 2007. - № 10. - С. 14.
+===Мокшонь кельсэ ===
+# Сяськомань тунда // Азыркина, Е. И. Родной литература: учебник-хрестоматия мокшень школань 5-це классонди / Е. И. Азыркина; кемокстазе Мордовия Республикань Образованиянь министерствась. - Саранск, 2003. - С. 221.
+# Шачема край // Азыркина, Е. И. Родной литература: учебник-хрестоматия мокшень школань котоце классонди / Е. И. Азыркина, М. Ф. Ефимова; кемокстазе Мордовия Республикань Образованиянь министерствась. - Саранск, 2005. - С. 186-187.
+===Рузонь кельсэ ===
+# ванодо. истя жо: Брыжинский, А. И. Писатели Мордовии: биобиблиогр. указ.  / А. И. Брыжинский, О. В. Пашутина, Е. И. Чернов. - Саранск, 2001. - С. 137-138.
+
+==Литературась<ref name="Время и события, 2010"/>==
+===Эрзянь кельсэ ===
+#Ломшин, М. Пионерткак, душман овтоткак…: эйкакштнэнь туртов П. У. Гайнинь шкинемазо / Михаил Ломшин // Сятко. - 2008. - № 4. - С. 83-88. 
+#Гайни Пётр Уварович (1910-1968); фото // Чилисема. - 2007. - № 10. - С. 13-14.
+#Ключагин, П. А. Илька Морыця // Ключагин, П. А. Апак прядо моро: ёвтнемат, новеллат, стихть, ледстнемат / П. А. Ключагин. - Саранск, 2006. -  С. 198-199.
+#Гайни (Поздяев) Пётр Уварович (1910-1968) // Штыком и пером = Штыкса и пераса = Штыксэ ды перасо: хрестоматия: в 2 ч. / авт.-сост. Т. Ф. Сафонова-Телина; [отв. ред.: М. И. #Ломшин, Т. И. Кубанцев]. - Саранск, 2005. - Ч. 2. Фронтовая летопись = Фронтовой  летопись = Фронтовой  летопись. - С. 145-147. 
+#Пётр Гайни // Сятко. - 2005. - № 5/6. - С. 89.
+#Пётр Уварович Поздяев (Пётр Гайни) (1910-1968) // Брыжинский, М. И. Тиринь вал: эрзянь школань 6-це классонь туртов учебник-хрестоматия / М. И. Брыжинский, Н. Н. Брыжинская; кемекстызе Мордовия Республикань Образованиянь министерствась. - Саранск, 2005. - С. 188.
+#Пётр Уварович Гайни (Поздяев) (1910-1968) // Видманова, В. П. Родной литература: учебник-хрестоматия эрзянь школань 5-це класснэнь / В. П. Видманова, Е. И. Чернов; кемекстызе Мордовия Республикань Образованиянь министерствась. - Саранск, 2004. - С. 246. 
+#Пётр Уварович Гайни: чачома чистэнзэ 90 иетненень // Сятко. - 2000. - № 9. - С. 97.
+#Ломанесь кулы, поэтесь – зярдояк…: П. У. Гайнинь 90 иетненень // Эрзянь правда. - 2000. - 7 сент. - С. 2.
+#Пётр Уварович Гайни (Поздяев) (1910-1968) // Каторова, А. М. Тиринь литература: эрзянь школань 7-це классонь туртов учебник-хрестоматия / А. М. Каторова. - Саранск, 2002. - С. 235-236.
+
+===Мокшонь кельсэ ===
+#Пётр Уварович Гайни (Поздяев) (1910-1968) // Азыркина, Е. И. Родной литература: учебник-хрестоматия мокшень школань котоце классонди / Е. И. Азыркина, М. Ф. Ефимова; кемокстазе Мордовия Республикань Образованиянь министерствась. - Саранск, 2005. - С. 185-186.  
+#Пётр Уварович Гайни (1910-1968) // Азыркина, Е. И. Родной литература: учебник-хрестоматия мокшень школань 5-це классонди / Е. И. Азыркина; кемокстазе Мордовия Республикань Образованиянь министерствась. - Саранск, 2003. - С. 220.
+
+===Рузонь кельсэ ===
+#Гайни (Поздяев) Пётр Уварович (1910-1968) // Мордовская литература в лицах [изоматериал] / Поволж. центр культур финно-угорских народов. - Саранск, 2008. 
+#Девяткин, С. Г. Гайни (псевд., настоящая фамилия Поздяев) Петр Уварович / С. Г. Девяткин // Мордовия: энциклопедия: в 2 т. - Саранск, 2003. - Т. 1. - С. 232.
+# ванодо. истя жо: Брыжинский, А. И. Писатели Мордовии: биобиблиогр. указ.  / А. И. Брыжинский, О. В. Пашутина, Е. И. Чернов. - Саранск, 2001. - С. 136-137; 138-139.
+
+
+==Лисьм. ==
+<references />
+{{stub}}
 [[Category:Эрзянь валморонь ладсийть|Г]]
 [[Category:Эрзянь кель|Г]]
 [[Category:Эрзянь сёрмадейть|Г]]
