--- a/Канаклей_(Орданьбуе).mw
+++ b/Канаклей_(Орданьбуе).mw
@@ -67,9 +67,9 @@
 Лемесь–антропоним, саеви эрзянь кезерень: '''Конак'''<ref name="Память, запечатленная в слове"/> лемстэнть  (смустезэ  тюрконь  '''кунак''' ({{Lang-ru|«гость»}}).
 
 ==Содавикс ломанть те велестэнть==
+* [[Тимохина, Татьяна Дементьевна|Татьяна Тимохина]]<ref name="Время и события, 2010">Время и события. 2010 Библиографический указатель. Указ Главы Республики Мордовия{{ref-ru}}</ref> — эрзянь сёрмадей, Россиянь Сёрмадеень Кужос совиця ([[1968]]).
 
-
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть|К]]
