*Empty MediaWiki Message*

--- a/Орданьбуе_(Тумобуе).mw
+++ b/Орданьбуе_(Тумобуе).mw
@@ -63,6 +63,13 @@
 
 Ашти Крутелей лангсо.
 
+==Содавикс ломанть те велестэнть==
+* [[Сульдина, Анна Дмитриевна|Анна Сульдина]]<ref name="Время и события, 2010">Время и события. 2010 Библиографический указатель. Указ Главы Республики Мордовия{{ref-ru}}</ref> — эрзянь валморозей.
+
+
+== Лисьм.: ==
+<references />
+
 
 [[Category:Мордовиянь велеть|О]]
 [[Category:Тумобуень велеть|О]]
