*Empty MediaWiki Message*

--- a/Покш_Игнадбуе.mw
+++ b/Покш_Игнадбуе.mw
@@ -87,6 +87,7 @@
 * [[Петровка (Покш Игнадбуе)|Петровка]] ({{lang-ru|д. Петровка}})
 * [[Протасова (Покш Игнадбуе)|Протасова]] ({{lang-ru|с. Протасово}})
 * [[Ракшая веле (Покш Игнадбуе)|Ракшая веле]] ({{lang-ru|д. Раксажены}}) 
+* [[Ташто Кшуманця  (Покш Игнадбуе)|Ташто Кшуманця]] ({{lang-ru|с. Старое Качаево}}) 
 * [[Ташто Селища (Покш Игнадбуе)|Ташто Селища]] ({{lang-ru|с. Старые Селищи}}) 
 * [[Ташто Чамза (Покш Игнадбуе)|Ташто Чамза]] (лиякс кортыть: Чаунза) {{lang-ru|с. Старое Чамзино}}) 
 * [[Чапамо (Покш Игнадбуе)|Чапамо]] ({{lang-ru|п. Чапамо}}) 
